text align fix in the host-box

--- a/main.css
+++ b/main.css
@@ -360,7 +360,7 @@ label {
 
 .sa-container {
     padding-bottom: 0;
-    text-align: left;
+    /* text-align: left; */
 }
 
 .integrationsContainer {
@@ -500,7 +500,7 @@ label {
     padding: 24px;
     margin-left: auto;
     margin-right: auto;
-
+    text-align: left;
 }
 
 .float-left {
@@ -623,57 +623,65 @@ label {
     display: flex;
     flex-wrap: nowrap;
     align-items: stretch;
+    overflow: auto;
     margin: 40px 0;
     padding: 40px 8px;
     line-height: 24px;
+    height: 448px;
 }
 
 article {
-    display: block;
-    width: 50%;
-    padding: 8px;
-    /* min-width: 280px; */
     box-shadow: 0 10px 50px rgba(27,31,35,.07)!important;
 }
 
 .story {
-    width: 264px;
+    display: block;
+    min-width: 280px;
+    margin: 8px;
+    overflow-wrap: break-word; 
 }
 
 .scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
-
-.card {
-    display: inline-block;
-  }
 
 .story-link {
     display: block;
     cursor: pointer;
     width: 264px;
+    margin: 0;
     background-color: initial;
-        padding: 8px;
 
-    /*  */
-    /* border-radius: 3px; */
-    transition: transform .3s;
 }
-
-/* .story-img-box {
-    position: absolute;
-    
-    overflow: hidden;
-
-} */
 
 .story-img {
     border: none;
     position: relative;
     height: 264px;
     width: 264px;
+}
+
+.text-items {
+    padding: 16px;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+}
+
+.story-title {
+    transition: color .3s;
+}
+
+.story-title p {
+    font-family: 'Inconsolata', monospace;
+}
+
+.story:hover {
+    transform: scale(1.025);
+    text-decoration: none;
+    outline-width: 0;
 }
 
 @media (min-width: 544px) {
